Exemplos de template

--- a/recipes/templates/contato.html
+++ b/recipes/templates/contato.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Contatos</title>
 </head>
 <body>
-    <h1>Recipes 1 {{name}}</h1>
+    <h1>Contatos: (XX)9XXXX-XXXX</h1>
 </body>
 </html>
