--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,14 +1,16 @@
-{% include  'recipes/partial/head.html'%}
+{% include 'recipes/partial/head.html'%}
+
 <body>
     <header class="main-header-container">
         <div class="main-hearder-container">
-            <h1>
+            <h1 class="container">
                 <a href="/">
-                    <i class="fas fa-address-book"></i> 
+                    <i class="fas fa-address-book"></i>
                     <span>Recipes 1 {{name}}</span>
-                </a>                               
+                </a>
             </h1>
-        </div>        
-    </header> 
+        </div>
+    </header>
 </body>
+
 </html>
