--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,11 +2,11 @@
 
 <body>
     <header class="main-header-container">
-        <div class="main-hearder-container">
-            <h1 class="container">
-                <a href="/">
-                    <i class="fas fa-address-book"></i>
-                    <span>Recipes 1 {{name}}</span>
+        <div class="main-hearder container">
+            <h1>
+                <a class="main-logo" href="/">
+                    <i class="fas fa-address-book main-logo-icon"></i>
+                    <span>Recipes</span>
                 </a>
             </h1>
         </div>
