--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,11 +2,11 @@
 
 <body>
     {% include 'recipes/partial/header.html'%}
-    <div class="seach-conteiner">
+    <div class="search-conteiner">
         <div class="container">
-            <form action="">
-                <input type="search" class="seach-input" name="search">
-                <button type="submit">Enviar</button>
+            <form action="" class="search-form">
+                <input type="search" class="search-input" name="search">
+                <button type="submit" class="search-button">Enviar</button>
             </form>
         </div>
     </div>
