--- a/recipes/templates/recipes/partial/head.html
+++ b/recipes/templates/recipes/partial/head.html
@@ -115,6 +115,25 @@
         .main-logo-icon {
             margin-right: 2rem;
         }
+
+        .search-form {
+            border: .2rem solid var(--color-primary-dark);
+            max-width: 64rem;
+            margin: 0 auto;
+            border-radius: .4rem;
+        }
+
+        .search-input,
+        .search-button {
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+        }
+
+        .search-button {
+            position: absolute;
+        }
     </style>
 
 </head>
